Bug 438627 - Contrast for active tab is insufficient with Breeze Dark color scheme
Summary: Contrast for active tab is insufficient with Breeze Dark color scheme
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.22.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-06-14 16:26 UTC by Piotr Mierzwinski
Modified: 2022-02-23 23:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments
tabs, dark color (4.04 KB, image/png)
2021-06-14 16:26 UTC, Piotr Mierzwinski
Details
tabs, breeze high contrast (3.80 KB, image/png)
2021-06-14 16:27 UTC, Piotr Mierzwinski
Details
tabs, kvantum dark (konsole) (2.83 KB, image/png)
2021-06-15 21:34 UTC, Piotr Mierzwinski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Mierzwinski 2021-06-14 16:26:48 UTC
Created attachment 139313 [details]
tabs, dark color

SUMMARY
As in subject. For details please look at attached screen shots.
Using Application style Breeze and color "Dark Breeze" I observe barely visible contrast between active and not active tabs. Notice please that using color: "Breeze High Contrast" doesn't help. Actually this nothing changes. 

BTW. Checking  views in System Settings (i.e. for Plasma Styles) with this color as current we experience even less contrast for highlight.

STEPS TO REPRODUCE
1.  start konsole or dolphin and open couple tabs
2.  look at the contrast between active and not active tab
3. 

OBSERVED RESULT
contrast between active and not active tab is barely visible

EXPECTED RESULT
contrast between active and not active tab should be more visible, at least like it happens in bright style

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: YES
(available in About System)
KDE Plasma Version: 5.22.0
KDE Frameworks Version: 5.83
Qt Version: 5.15.2 (+kde patches)

ADDITIONAL INFORMATION
Comment 1 Piotr Mierzwinski 2021-06-14 16:27:35 UTC
Created attachment 139314 [details]
tabs, breeze high contrast
Comment 2 Nate Graham 2021-06-15 20:49:06 UTC
The blue line is intended to be a contrast enhancer. I gather that's not good enough for you?
Comment 3 Piotr Mierzwinski 2021-06-15 21:33:46 UTC
(In reply to Nate Graham from comment #2)
> The blue line is intended to be a contrast enhancer. I gather that's not
> good enough for you?

Yes. I think is not enough. In my opinion comparing to bright mode this is very poor contrast. And blue line barely marks the contrast in tabs.  I think  bright mode seems to be more polished in this case.

When I run my eyes over the cards is easier for me to find active card when it contrasts enough, even if font in title contrasts then is easier to find such tab. In dark mode in Breeze this doesn't happen. We have only workaround like mentioned line.

And because of this sometime ago I started to use dark kvantum style, where I have brigher font for active tab and darker for not active tab. Please check attached screenshot. I think this makes better contrast than line drowing on top or bottom of tab. 

Notice please that line might be unnoticed under certain circumstances, for example when something in similar color will be placed in very close this line.

In my humble opinion this doens't happen if we have better contrast of background like in bright mode or if title is drawn brighter for active or darker for not active tab, if contrast of background for both types of them is worse, like current situation.
Comment 4 Piotr Mierzwinski 2021-06-15 21:34:26 UTC
Created attachment 139350 [details]
tabs, kvantum dark (konsole)
Comment 5 Nate Graham 2021-06-15 21:42:03 UTC
Fair enough.
Comment 6 Bug Janitor Service 2022-02-23 18:46:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/188
Comment 7 Piotr Mierzwinski 2022-02-23 21:49:10 UTC
I saw screenshots and think that also colour of found could be darker a bit, not with the same colour like active tab. This would be improved more the contrast.
Comment 8 Piotr Mierzwinski 2022-02-23 22:01:18 UTC
I saw screenshots and think that also colour of _font_ in not active tab could be darker a bit, and not with the same colour like in active tab. This would be improved more the contrast.
Comment 9 Janet Blackquill 2022-02-23 23:13:46 UTC
Git commit 9d361c9e26747b44f104efe9d545f3877ed6100a by Janet Blackquill.
Committed on 23/02/2022 at 18:41.
Pushed by ngraham into branch 'master'.

kstyle: fix low contrast tabs on dark

This fixes the contrast of tabs on dark themes by using
a darkening factor on the Window colour, adjusted for
whether it's light or dark, instead of using the Shadow
colour for both light and dark themes.
FIXED-IN: 5.25

M  +2    -1    kstyle/breezehelper.cpp

https://invent.kde.org/plasma/breeze/commit/9d361c9e26747b44f104efe9d545f3877ed6100a