kstyle: fix low contrast tabs on dark

This fixes the contrast of tabs on dark themes by using
a darkening factor on the Window colour, adjusted for
whether it's light or dark, instead of using the Shadow
colour for both light and dark themes.

BUG: 438627
FIXED-IN: 5.25